--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -19,6 +19,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pandas
+        pip install nltk
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -29,3 +30,4 @@ jobs:
     - name: Test with py
       run: |
          python3 tester.py
+         
