--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -20,7 +20,7 @@ jobs:
         pip install -r requirements.txt
         pip install pandas
         pip install nltk
-        pip install cPIckle
+        pip install cPickle
     - name: Lint with flake8
       run: |
         pip install flake8
