--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -16,11 +16,10 @@ jobs:
     - name: Install dependencies
       run: |
         pip freeze > requirements.txt
-        python -m pip install --upgrade pip
+        python3 -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pandas
         pip install nltk
-        pip install cPickle
     - name: Lint with flake8
       run: |
         pip install flake8
