--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,7 @@ jobs:
       run: echo Hello, world!
     - name: Run a multi-line script
       run: |
-    - name: Python Style Checker
-      uses: andymckay/pycodestyle-action@0.1.3
-
+    
         echo Add other actions to build,
         echo test, and deploy your project.
+        echo success
