--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-pandas==0.24.2
-pickleDB==0.9.2
-matplotlib==2.1.1
-nltk==3.4.5
-pyspellchecker==0.5.2
-numpy==1.13.3
-pyenchant==2.0.0
-scikit_learn==0.21.3
 spellchecker==0.4
+numpy==1.17.4
+keras==2.3.1
+nltk==3.4.5
+pandas==0.25.3
+pyenchant==2.0.0
+scikit_learn==0.22.1
+textblob==0.15.3
