--- a/.github/workflows/formater.yml
+++ b/.github/workflows/formater.yml
@@ -14,6 +14,7 @@ jobs:
     - name: Black Code Formatter
       uses: lgeiger/black-action@v1.0.1
     - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+      run: black /Prototype
+        echo Successful formating,
+        
+      
