--- a/.github/workflows/formater.yml
+++ b/.github/workflows/formater.yml
@@ -1,21 +1,17 @@
-name: FORMATER
-
-on: [push]
-
+name: Black Formatter
+on: [push, pull_request]
 jobs:
-  build:
-
+  black-format:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Black Code Formatter
-      uses: lgeiger/black-action@v1.0.1
-    - name: Run a multi-line script
-      run: sudo pip install black ,
-          black /Prototype ,
-        echo Successful formating
+      - uses: actions/checkout@v1
+      - name: Black Code Formatter
+        uses: lgeiger/black-action@master
+        with:
+          args: ". --diff"
+
+
+
+
         
       
