--- a/.github/workflows/formater.yml
+++ b/.github/workflows/formater.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Black Code Formatter
         uses: lgeiger/black-action@master
         with:
-          args: ". --diff"
+          args: ". --verbose"
 
 
 
