--- a/.github/workflows/NeuralTest.yml
+++ b/.github/workflows/NeuralTest.yml
@@ -16,5 +16,5 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - run: cd Prototype,
-              python NeuralNetworkwithkfold.py
+      - run: ls
+            
